# zscli

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  zscli.rst
make.include/: common.mk  test.mk
secrets/: README.md
tests/: __init__.py  conftest.py  test_api.py  test_zscli.py
zscli/: __init__.py  cli.py  version.py
