[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.8"



[project]
name = "zscli"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["zscli"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "click==8.0.3",
  "requests==2.27.1",
]

[project.optional-dependencies]
dev = [
  "black==22.1.0",
  "bump2version==1.0.1",
  "coverage==6.3.1",
  "flake8==4.0.1",
  "pytest==7.0.0",
  "pytest-datadir==1.3.1",
  "tox==3.24.5"
]
docs = [
  "Sphinx==4.4.0",
  "sphinx-click==3.1.0"
]

[project.urls]
Home = "https://github.com/rstms/zscli"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
zscli = "zscli:cli"
